--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.7.1</version>
+			</plugin>
+
 		</plugins>
 		<pluginManagement>
 			<plugins>
@@ -110,7 +117,7 @@
 						<dependency>
 							<groupId>com.puppycrawl.tools</groupId>
 							<artifactId>checkstyle</artifactId>
-							<version>10.3</version>
+							<version>10.3.1</version>
 						</dependency>
 					</dependencies>
 				</plugin>
