--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -8,8 +8,8 @@ jdbc.password=${POSTGRES_PASSWORD}
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql=true
 # настройка автоматического создания таблиц при помощи sql-скрипта
-javax.persistence.schema-generation.database.action=create
-javax.persistence.schema-generation.create-script-source=schema.sql
+#javax.persistence.schema-generation.database.action=create
+#javax.persistence.schema-generation.create-script-source=schema.sql
 
 # вывод запросов
 logging.level.org.hibernate.SQL=DEBUG
