--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       - server
     environment:
       - SHAREIT_SERVER_URL=http://server:9090
-#      - TZ=Europe/Moscow
+      - TZ=Europe/Moscow
 
   server:
     build: server
@@ -18,13 +18,14 @@ services:
     container_name: server_container
     ports:
       - "9090:9090"
+      - "9091:9091"
     depends_on:
       - db
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/shareit
-      - SPRING_DATASOURCE_USER=root
-      - SPRING_DATASOURCE_PASSWORD=root
-#      - TZ=Europe/Moscow
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
+      - TZ=Europe/Moscow
 
   db:
     image: postgres:13.7-alpine
@@ -35,3 +36,4 @@ services:
       - POSTGRES_DB=shareit
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=root
+      - TZ=Europe/Moscow
