--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,17 +1,27 @@
 server.port=9090
 spring.jpa.hibernate.ddl-auto=none
-jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-jdbc.username=${POSTGRES_USER}
-jdbc.password=${POSTGRES_PASSWORD}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.sql.init.mode=always
 
-hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-hibernate.show_sql=true
-# настройка автоматического создания таблиц при помощи sql-скрипта
-#javax.persistence.schema-generation.database.action=create
-#javax.persistence.schema-generation.create-script-source=schema.sql
-
-# вывод запросов
-logging.level.org.hibernate.SQL=DEBUG
-# вывод значений, которые подставляются в параметры запросов
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder = TRACE
+logging.level.ru.practicum.shareit=DEBUG
+logging.level.org.springframework.orm.jpa=INFO
+logging.level.org.springframework.transaction=INFO
+logging.level.org.springframework.transaction.interceptor=TRACE
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+#---
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
+spring.datasource.username=root
+spring.datasource.password=root
+#---
+spring.config.activate.on-profile=ci,test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./db/shareit
+spring.datasource.username=test
+spring.datasource.password=test
+#---
+#H2 console:
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
