--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       - server
     environment:
       - SHAREIT_SERVER_URL=http://server:9090
-      - TZ=Europe/Moscow
+#      - TZ=Europe/Moscow
 
   server:
     build: server
@@ -23,9 +23,9 @@ services:
       - db
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/shareit
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root
-      - TZ=Europe/Moscow
+      - POSTGRES_USER=shareit
+      - POSTGRES_PASSWORD=shareit
+#      - TZ=Europe/Moscow
 
   db:
     image: postgres:13.7-alpine
@@ -34,6 +34,6 @@ services:
       - "6541:5432"
     environment:
       - POSTGRES_DB=shareit
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root
-      - TZ=Europe/Moscow
+      - POSTGRES_USER=shareit
+      - POSTGRES_PASSWORD=shareit
+#      - TZ=Europe/Moscow
