--- a/server/pom.xml
+++ b/server/pom.xml
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
+            <version>42.3.8</version>
         </dependency>
 
         <dependency>
