--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -10,11 +10,12 @@ logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 #---
-spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=shareit
+spring.datasource.password=shareit
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 #---
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
@@ -22,6 +23,6 @@ spring.datasource.url=jdbc:h2:file:./db/shareit
 spring.datasource.username=test
 spring.datasource.password=test
 #---
-#H2 console:
+H2 console:
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
