--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -11,9 +11,9 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${POSTGRES_USER}
-spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.url=jdbc:postgresql://db:5432/shareit
+spring.datasource.username=shareit
+spring.datasource.password=shareit
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #---
